--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
